# bazel-qt-example

./: .bazelrc  .gitignore  .gitlab-ci.yml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE-ci.bzl
app/: BUILD  main.cpp
demos/helloworld/: BUILD  main.cpp
demos/mainwindow/: BUILD  main.cpp  main_window.cpp  main_window.h
docs/: FAQ.md  SETUP.md
labs/basics/: BUILD
labs/basics/task1/: BUILD  MainWindow.cpp  MainWindow.h  main.cpp
labs/basics/task2/: BUILD  MainWindow.cpp  MainWindow.h  README.md  main.cpp
labs/duolingo/: BUILD
labs/duolingo/include/: difficulty_dialog.h  grammar_exercise.h  mainwindow.h  task_types.h  translation_exercise.h
labs/duolingo/resources/: resources.qrc
labs/duolingo/src/: difficulty_dialog.cpp  grammar_exercise.cpp  main.cpp  mainwindow.cpp  translation_exercise.cpp
labs/raycaster/: BUILD
labs/raycaster/include/: controller.h  drawingarea.h  lightsource.h  mainwindow.h  polygon.h  ray.h
labs/raycaster/src/: controller.cpp  drawingarea.cpp  main.cpp  mainwindow.cpp
tools/bazel/: BUILD  helpers.bzl  nasm_library.bzl
tools/cmake/: BuildFlags.cmake  TestSolution.cmake
tools/testing/: run_linter.sh  test_classic.sh  test_workspace.py
tools/util/: BUILD  dist.h  strict_iterator.h  util.h
utils/: BUILD.bazel  csv.cpp  csv.h
