load("@rules_qt//:qt.bzl", "qt_cc_library")

qt_cc_library(
    name = "csv",
    srcs = [
        "csv.cpp",
    ],
    hdrs = [
        "csv.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_qt//:qt_core",
        "@rules_qt//:qt_sql",
        "@rules_qt//:qt_widgets",
    ],
)

cc_library(
    name = "utils",
    visibility = ["//visibility:public"],
    deps = [
        ":csv",
    ],
)
